---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: ???
  Features:
    - 'Shift + Q' (Spidertron remote pipette) can optionally create a temporary remote instead of picking one from the player's inventory (disabled by default)
  Bugfixes:
    - Fixed possible crash when playing with Space Exploration and pressing 'U' whilst Navigation Satellite Uplink is open
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 4 July 2021
  Compatibility:
    - Allow Alt + Click pathfinder mode to work with spidertron remotes from other mods (e.g. Spidertron control center)
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 15 May 2021
  Compatibility:
    - Fixed crash when a Krastorio2 spidertron enters a vehicle if another mod (such as RSO) changed the mod load order
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 10 May 2021
  Features:
    - Added settings to configure the spidertron volume and sound play frequency
  Changes:
    - New thumbnail
  Compatibility:
    - Players can no longer quick-toggle to enter a spidertron whilst jetpack is active
  Bugfixes:
    - Fixed 'Shift + Q' (Spidertron remote pipette) causing crash when in god mode
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 7 May 2021
  Compatibility:
    - Fixed crash in Spidertron Patrols v2.1.0
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 7 May 2021
  Changes:
    - 'Shift + Q' (Spidertron remote pipette) will now clear cursor instead of picking a remote if the player is already holding an item
  Compatibility: