@@ -30,6 +30,12 @@ spidertron-enhancements-enter-entity-base-game=Enter/exit vehicles from spidertr
 spidertron-enhancements-enter-entity-custom=Enter/exit vehicles from spidertron with custom control __CONTROL__spidertron-enhancements-enter-vehicles__ [img=info]
 spidertron-enhancements-pipette-unconnected-remote=Spidertron pipette (__CONTROL__spidertron-enhancements-spidertron-pipette__) picks an unconnected remote if no connected remotes are found [img=info]
 
+[string-mod-setting]
+spidertron-enhancements-enter-entity-none=None
+spidertron-enhancements-enter-entity-trains=Trains only
+spidertron-enhancements-enter-entity-all-except-spidertrons=All except spidertrons
+spidertron-enhancements-enter-entity-all=All
+
 [mod-setting-description]
 spidertron-enhancements-sound-pause=Average number of seconds before a spidertron's sound starts playing again (sound plays for 19s).\n[color=green]Default = 0[/color]
 spidertron-enhancements-volume-scale=[color=green]Default = 1[/color]
