@@ -21,10 +21,11 @@ data:extend({
         order = "b"
     },
     {
-        type = "bool-setting",
+        type = "string-setting",
         name = "spidertron-enhancements-enter-entity",
         setting_type = "runtime-global",
-        default_value = true,
+        default_value = "all-except-spidertrons",
+        allowed_values = {"none", "trains", "all-except-spidertrons", "all"},
         order = "aa"
     },
     {
@@ -84,13 +85,13 @@ if mods["SpidertronEngineer"] then
     -- Disable Spidertron Enhancement features that aren't compatible
     data.raw["bool-setting"]["spidertron-enhancements-enter-entity-base-game"].hidden = true
     data.raw["bool-setting"]["spidertron-enhancements-enter-entity-custom"].hidden = true
-    data.raw["bool-setting"]["spidertron-enhancements-enter-entity"].hidden = true
+    data.raw["string-setting"]["spidertron-enhancements-enter-entity"].hidden = true
     data.raw["bool-setting"]["spidertron-enhancements-show-spider-on-vehicle"].hidden = true
     data.raw["bool-setting"]["spidertron-enhancements-enter-player"].hidden = true
 
     data.raw["bool-setting"]["spidertron-enhancements-enter-entity-base-game"].forced_value = false
     data.raw["bool-setting"]["spidertron-enhancements-enter-entity-custom"].forced_value = false
-    data.raw["bool-setting"]["spidertron-enhancements-enter-entity"].forced_value = false
+    data.raw["string-setting"]["spidertron-enhancements-enter-entity"].forced_value = false
     data.raw["bool-setting"]["spidertron-enhancements-show-spider-on-vehicle"].forced_value = false
     data.raw["bool-setting"]["spidertron-enhancements-enter-player"].forced_value = false
 end
